# powershellScripts

./: .betterleaksignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  .rumdl.toml  AGENTS.md  AI-INDEX.md  AddStartup.ps1  CLAUDE.md  Compare-JsonFiles.ps1  ConventAllbyExt.ps1  Dockerfile.pester  DownloadVSCodeExtension.ps1  ExtractAss.ps1  GEMINI.md  LICENSE  Manage-BinScripts.ps1  PesterConfiguration.ps1  Play-Bee.ps1  QWEN.md  README.md  Setup-SshNoPasswd.ps1  Setup-VSCodeSSH.ps1  Start-Bee.ps1  Switch-Mirrors.ps1  VideoToAudio.ps1  abematv.ps1  allWavToFlac.ps1  base-cli.ps1  base.ahk  biome.json  cbz.ps1  cleanEnvPath.ps1  cleanTorrent.ps1  commonps.ps1  concatXML.ps1  concatflv.ps1  denmodown.ps1  dlsiteUpdate.ps1  (+48 more)
.claude/: settings.json  settings.json.new
.codex/: config.toml  (+1 more)
ai/skills/dev/browser-bookmark-organizer/: SKILL.md  pyproject.toml
ai/skills/dev/browser-bookmark-organizer/references/: workflow.md
ai/skills/dev/browser-bookmark-organizer/src/browser_bookmark_organizer/: analysis.py  cli.py  link_checker.py  models.py  parser.py  report.py  review_server.py  state.py  templating.py  workspace.py
ai/skills/dev/browser-bookmark-organizer/tests/: test_analysis.py  test_review_server.py
projects/clis/pwshfmt-rs/: Cargo.toml  README.md  package.json
projects/clis/pwshfmt-rs/src/: cli.rs  config.rs  discovery.rs  error.rs  lib.rs  main.rs  processor.rs  summary.rs
projects/clis/pwshfmt-rs/src/formatter/: mod.rs
projects/clis/pwshfmt-rs/tests/: cli_config.rs  discovery_and_processor.rs
projects/clis/pwshfmt-rs/tests/common/: mod.rs
(+2372 files in other folders)
