[package]
name = "pwshfmt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
globset = "0.4"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
