[project]
name = "browser-bookmark-organizer"
version = "0.1.0"
description = "Analyze Netscape bookmark HTML exports and optionally check link health."
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0,<1",
  "httpx[socks]>=0.28.1,<1",
  "jinja2>=3.1.6,<4",
  "uvicorn>=0.38.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_bookmark_organizer"]
artifacts = [
  "src/browser_bookmark_organizer/templates/**",
  "src/browser_bookmark_organizer/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
